# rpgt

./: .gitignore  .isort.cfg  .pylintrc  LICENSE  README.md  noxfile.py  pyproject.toml  rpgt.conf
.github/workflows/: run_tests.yml
contrib/: git_config.sh
docs/design/: generic_character_creation.md
features/: environment.py  init.feature
features/steps/: executable_steps.py
rpgt/: __main__.py
rpgt/core/: architect.py  character.py  character_record.py  configuration.py  element.py  loader.py  observer.py  rules_factory.py  rules_handler.py  storage.py  ui.py  wizard.py
